# psensor

./: .gitignore  CMakeLists.txt  Makefile  NEWS.html  README.html  README.md  aclocal.m4  config.h.cmake  config.h.in  configure  configure.ac  make-deb.sh  psensor.desktop
doc/: Makefile  Makefile.in  TODO.html  faq.html
icons/hicolor/14x14/: Makefile.in
icons/hicolor/16x16/: Makefile.in
icons/hicolor/22x22/: Makefile.in
icons/hicolor/24x24/: Makefile.in
icons/hicolor/32x32/: Makefile.in
icons/hicolor/48x48/: Makefile.in
icons/hicolor/64x64/: Makefile.in
icons/hicolor/scalable/: Makefile.in
icons/ubuntu-mono-dark/apps/22/: Makefile.in
icons/ubuntu-mono-dark/status/22/: Makefile.in
icons/ubuntu-mono-light/status/22/: Makefile.in
po/: Makefile.in  de.po  el.po  es.po  fr.po  hr.po  hu.po  it.po  lv.po  nl.po  pl.po  psensor.pot  pt_BR.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
src/: CMakeLists.txt  Makefile.am  Makefile.in  cfg.c  cfg.h  graph.c  graph.h  main.c  notify_cmd.c  notify_cmd.h  paths.h.in  psensor.1  psensor.gschema.xml  pxdg.c  pxdg.h  rsensor.c  rsensor.h  ui.c  ui.h  ui_appindicator.c  ui_appindicator.h  ui_color.h  ui_graph.c  ui_graph.h  ui_notify.c  ui_notify.h  ui_pref.c  ui_pref.h  ui_sensorlist.c  ui_sensorlist.h  ui_sensorpref.c  ui_sensorpref.h  ui_unity.c  ui_unity.h
src/glade/: Makefile.in  psensor-pref.glade  psensor.glade
src/lib/: Makefile.am  Makefile.in  amd.c  amd.h  bool.h  color.c  color.h  common.h  hdd.h  hdd_atasmart.c  hdd_hddtemp.c  io.c  io.h  lmsensor.c  lmsensor.h  measure.c  measure.h  nvidia.c  nvidia.h  parray.h  pgtop2.c  pgtop2.h  plog.c  plog.h  pmutex.h  psensor.c  psensor.h  psensor_json.c  psensor_json.h  ptime.h  pudisks2.c  pudisks2.h  slog.c  slog.h  temperature.h  url.c  url.h
src/server/: Makefile.in  psensor-server.1  server.c  server.h  sysinfo.c  sysinfo.h
tests/: Makefile.in  test_io_dir_list.c  test_psensor_value_to_str.c
